[package]
name = "yunzhi-one-cli"
version = "0.1.0"
edition = "2021"
description = "Yunzhi One CLI agent tool"
license = "AGPL-3.0-only"

[[bin]]
name = "yunzhi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
futures-util = "0.3"
glob = "0.3"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shell-words = "1.1"
similar = "2.6"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.13"
wiremock = "0.6"
